--- a/.prettierrc
+++ b/.prettierrc
@@ -11,6 +11,8 @@
   "endOfLine": "lf",
   "htmlWhitespaceSensitivity": "css",
   "singleAttributePerLine": false,
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindStylesheet": "./src/styles.css",
   "overrides": [
     {
       "files": "*.html",
