--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.12",
     "typescript": "~5.7.2",
     "typescript-eslint": "8.33.1"
   }
